--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "npm-run-all2": "^6.2.0"
   },
   "dependencies": {
+    "@pothos/core": "^4.3.0",
+    "@pothos/plugin-prisma": "^4.4.0",
+    "@pothos/plugin-relay": "^4.3.0",
+    "graphql-yoga": "^5.10.11",
     "hono": "^4.6.20"
   }
 }
